--- a/src/css/components/lightbox.css
+++ b/src/css/components/lightbox.css
@@ -1,3 +1,52 @@
-/**
-* Lightbox
-*/
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: left; 
+  }
+  
+  ul li {
+    display: inline-block;
+  }
+  
+  ul img {
+    width: flex;
+    height: flex;
+    object-fit: cover;
+    cursor: pointer;
+    transition: transform 0.4s ease, box-shadow 0.4s ease;
+    z-index: 1;
+  }
+  
+
+  ul img.expanded {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(3); 
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8); 
+    z-index: 10; 
+    transition: transform 0.4s ease, box-shadow 0.4s ease;
+  }
+  
+
+  body.expanding {
+    overflow: hidden;
+  }
+  
+  body.expanding::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px); 
+    z-index: 5;
+  }
+  
